<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello hike!</string>
    <string name="app_name">Zone</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_hike">Zone</string>
    <string name="title_hike_new">Zone</string>
    <!-- <string name="title_hike">Hike</string>
    <string name="title_hike_new">Hike</string> -->
    <string name="title_hike_game">Hike Game</string>
    <string name="title_imagepreview">Preview</string>
    
    <string name="mission">Newbei Mession</string>
    <string name="friend">My Friend</string>
    <string name="home">Home</string>
    <string name="play">Recently Played</string>
    <string name="allgames">All Games</string>
    <string name="community">Game Community</string>
    <string name="leader">Leaderboard</string>
    <string name="game">Game Category</string>
    <string name="search">Search</string>
    <string name="hike">Hike coins</string>
    <string name="set">Setting</string>
    <string name="logout">Logout</string>
    <string name="logoutalready">Logout Already</string>
    <string name="menu_item">MenuItem</string>
    <string name="friends">Friends</string>
    <string name="message">Message</string>
    <string name="games">Games</string>
    <string name="visitors">Visitors</string>
    <string name="activities">Activities</string>
    <string name="userName">userName</string>
    <string name="header">header</string>
    <string name="notice">notice</string>
    <string name="welcome">Welcome to hike!</string>
    <string name="playgame">Play the game you never met before</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="inputphonenumber">Please input your mobile phone number.</string>
    <string name="phonenumber">Phone number</string>
    <string name="term">Terms of use</string>
    <string name="next">Next</string>
    <string name="verify">verifying your number...</string>
    <string name="smspin">Enter your SMS PIN here, Please!</string>
    <string name="sms">SMS PIN</string>
    <string name="enternickname">Please enter your nickname here, Only number and letters, 3-15 length.</string>
    <string name="nickname">Nickname</string>
    <string name="letsplay">Let\'s Play</string>
    <string name="airtelnumber">Your Airtel phone number is</string>
     <string name="enteryournickname">Please enter your nickname here</string>
     <string name="loginviapin">Or Login via Custom PIN ></string>
     <string name = "enternumberandpin">Please enter your mobile number and </string>
     <string name = "custompin">custom PIN</string>
     <string name = "custompin.">custom PIN.</string>
     <string name = "whatispin">What is custom PIN?</string>
     <string name = "Null">NULL</string>
     <string name = "help">Help</string>
     <string name = "status">add a topic here</string>
     <string name = "status_hint">Add status here</string>
     <string name = "add_topic">Add topic here</string>
     <string name = "subject">subject</string>
     <string name = "relation">(@Friends/Games,Multiple choice for 10 times)</string>
     <string name = "helptext1">For sign in or register on Hike, you need to
                          provide your real mobile phone number
                          first.Then tap the \""get code"\" button and you will
                          receive a PIN code from SMS.</string>
     <string name = "helptext2">You can only get 1 code in every 2 minutes.If 
                          you have any problem gettting the SMS,please
                          call XXXXXXXXXXX.</string>  
     <string name = "helptext3">New code will be sent you when you tap \""Get Code"\" button again. Only the latest code is
                          effective.</string> 
     <string name = "customhelp">Custom PIN is the password that you could log
                          on Hike without getting PIN code from mobile
                          operator. You could use this PIN code to log 
                          on Hike directly next time after submit the
                          \""custom PIN"\" option in your settings page.</string>   
    <string name = "login_former">Login with former account</string> 
    <string name = "login_another">Login with another account</string> 
    <string name = "invitefriend">Invite Friends</string>
    <string name = "sendinvite">Do you want to use your contact list to </string>
    <string name = "usecontactlist">Use my Contact list</string>
    <string name = "notnow">Not now</string>
    <string name = "sendinvite1">search friends on zone?</string>
    <string name = "select">Select All</string>
    <string name = "unselect">Unselect All</string>
    <string name = "sentsucess">Sent successfully!</string>
    <string name = "sentfail">Sent Failure!</string>
    <string name = "notsendfrequent">Invitation cannot be frequent sent!</string>
    
    <string name = "relation_friends">Friends</string>          
    <string name = "relation_games">Games</string>
    
    <string name = "paymenttitle">Please confirm payment info here</string>
    <string name = "pinexpinfo">This Page is expired</string>
    <string name = "hikename">Zone Name:</string>
    <string name = "nikename">Nike Name:</string>
    <string name = "mobileNumber">Mobile Number:</string>
    <string name = "rechargeAcount">Recharge Amount:</string>
    <string name = "actualPayment">Actual Payment:</string>
    <string name = "paymentMethod">Payment Method:</string>
    <string name = "paymentOrderId">Transaction ID:</string>
    <string name = "pincodeerror">Pulling failed, please input the code from SMS or back to recharge again.</string>
    <string name = "carrierbilling">Carrier billing</string>
    <string name = "pincode">SMS PIN CODE</string>
    <string name = "getcode">Get Code</string>
    <string name = "errorcode">wrong pin code ,try again!</string>
     <string name = "emptycode">Please enter the pin Code</string>
    <string name = "paymenttext">Carrier Billing</string>
    <string name = "paymentsms">SMS PIN CODE</string>
    <string name = "gotorecharge">Confirm and Continue</string>
    <string name = "no_content_tips">Content cannot be empty.</string>
    <string name = "cancel">Cancel</string>
    <string name = "none"> </string>
    <string name = "status_reply">Add reply here!</string>
    <string name = "status_comment">Add comment here!</string>
    <string name = "error_no_market">Sorry. You have to install Google Play first!</string>
    <string name = "error_no_sdcard">Download failed! External storage not found</string>
    <string name = "error_no_space">Download failed! Not enough memory</string>
    <string name = "error_no_apk">Install failed! Cannot find APK!</string>
    <string name = "error_network">Network Problem!</string>
    <string name = "cannotpull">We couldn\'t pull your phone#.</string>
    <string name = "getstart">Enter it below to get started*.</string>
    <string name = "accept">Accept and Continue</string>
    <string name = "hint">Nickname (3-15 characters)</string>
    <string name = "ifgetpin">Thanks! Did you get a SMS PIN?</string>
    <string name = "enter">Enter it here.</string>
    <string name = "pin">PIN</string>
    <string name = "ifwrongpin">Entered a wrong number?</string>
    <string name = "tap">Tap here</string>
    <string name = "seton">You\'re all set on</string>
    <string name = "whatisyourname">What\'s your name?</string>
    <string name = "pulling">Pulling your digits...</string>
    <string name = "tryagain">Try Again</string>

    <string name = "OK" >OK</string>
    
    <string name = "character_limit" >Exceed character limit!</string>
    
    <string name = "confirm_exit_title">Sure to exit?</string>
    <string name = "confirm_exit_title_ok">Exit</string>
    <string name = "confirm_exit_title_cancel">Cancel</string>
    <string name = "termsofservice">Terms of Service</string>
     <string name = "nocontacts">No contacts found.</string>
     <string name="nofriends">If you want to @ friends, please add a friend first.</string>
    <string name = "checkupdate_title">Check for Updates</string>
    <string name = "newversion_title">New Version Found</string>
    <string name = "checkupdate_contents">Checking for updates, please wait...</string>
    <string name = "btn_update">Update</string>
    <string name = "btn_ok">OK</string>
    <string name = "btn_notnow">Not Now</string>

</resources>
